// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders application with retro-certs 1`] = `
<Suspense
  fallback="Loading..."
>
  <Switch>
    <Route
      exact={true}
      key="/"
      path="/"
    >
      <RedirectToGuide />
    </Route>
    <Route
      key="/guide"
      path="/guide"
    >
      <GuidePage />
    </Route>
    <Route
      key="/retroactive-certification/landing"
      path="/retroactive-certification/landing"
    >
      <RetroCertsLandingPage
        setUserData={[Function]}
        userData={
          Object {
            "status": "not-logged-in",
          }
        }
      />
    </Route>
    <Route
      key="/retroactive-certification"
      path="/retroactive-certification"
    >
      <RetroCertsAuthPage
        setUserData={[Function]}
        userData={
          Object {
            "status": "not-logged-in",
          }
        }
      />
    </Route>
    <Route>
      <PageNotFound />
    </Route>
  </Switch>
</Suspense>
`;

exports[`<App /> renders application without retro-certs 1`] = `
<Suspense
  fallback="Loading..."
>
  <Switch>
    <Route
      exact={true}
      key="/"
      path="/"
    >
      <RedirectToGuide />
    </Route>
    <Route
      key="/guide"
      path="/guide"
    >
      <GuidePage />
    </Route>
    <Route
      key="/retroactive-certification/landing"
      path="/retroactive-certification/landing"
    >
      <PageNotFound />
    </Route>
    <Route
      key="/retroactive-certification"
      path="/retroactive-certification"
    >
      <PageNotFound />
    </Route>
    <Route>
      <PageNotFound />
    </Route>
  </Switch>
</Suspense>
`;
